2007-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-12
	* explicitely generate '<html>' and '</html>' tags, don't rely on
	cgicc commands.

2007-11-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-11
	* add scripts/edmConfigFromDB (for lack of a better place to put
	it)

2007-09-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-09
	* Statemachine.cc: add missing soap callback if target state is
	'FAILED'.

2007-08-29  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-08
	* I think the XMAS monitoring would only now work properly, as the
	itemGroupListener is registered with both (app&mon) info spaces.

2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-07
	* *now* the WebGUI should be working properly with xmas ...
	* removed 'addItemRetrieveListener' method.
	* the actionPerformed from xdata::ActionListener (the app
	instantiating the WebGUI) should now recompute all
	necessary parameters upon any 'ItemGroupRetrieveEvent'.
	

2007-08-27  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-06
	* fix to WebGUI: monitored parameters were not properly updated
	for xmas

2007-08-22  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-05
	* added board sense for DAQ GTFE block (fixes crash when running with fake data)

2007-08-21  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-04
	* added functions to retrieve global event no. from GT blocks
	* modified icon paths in webgui and added appl icon in hyperdaq page
	
2007-07-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-03
	* adjust WebGUI to instantiate the monitorable infospace of an
	application the xdaq3.9 way.

2007-04-16  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-00
	* use new plugin manager. Moved module definitions to plugin directory
	NOTA BENE: these changes are incompatible with the 14 series
